2006-11-17  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder.h
	* libtinymail/tny-folder.c: added tny_folder_transfer_msgs for
	copying/moving messages between folders

	* libtinymail-camel/tny-camel-folder.h
	* libtinymail-camel/tny-camel-folder.c: added a default Camel
	implementation for tny_folder_transfer_msgs method

	* test/functional/Makefile.am
	* test/functional/msg-transfer.c: added this program to test
	tny_folder_transfer_msgs implementation

2006-11-16  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Fixed a rather big memory leak when
	downloading new messages happened
	* Added a basic first Camel implementation for TnySendQueue

2006-11-16  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder-store-query.c
	(tny_folder_store_query_item_get_type): replaced TnyFolderStoreQuery
	by TnyFolderStoreQueryItem in the instance size field 

2006-11-15  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymailui-mozembed: fixes for the Gecko support

2006-11-14  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymailui-mozembed: fixes for the Gecko support

2006-11-13  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: moved some scripts in the configure.ac
	to the m4 directory to simplify migrating to the toplevel configure.ac
	once
	* libtinymail-camel: Reference counting of returned Camel types

	* This was a major API change in libtinymail-camel

2006-11-13  Øystein Gisnås <oystein@gisnas.net>

	* debian/: Dependencies
	* README: Some documentation updates

2006-11-12  Philip van Hoof <pvanhoof@gnome.org>

	* Corrected the MimePartSaveStrategy pattern method naming
	* Various gtk-doc fixes
	* Added the tny_folder_add_msg API and implemented it for TnyCamelFolder

	* This was a major API change

2006-11-12  Øystein Gisnås <oystein@gisnas.net>

	* debian/: Added debian package information and environment

2006-11-11  Øystein Gisnås <oystein@gisnas.net>
