@@ -199,6 +199,20 @@ tny_moz_embed_stream_flush (TnyStream *self)
 	return 0;
 }
 
+
+/* Fire "children_changed::add" event to refresh "UI-Grab" window of GOK,
+* this event is not fired when using gtk_moz_embed_xxx_stream,
+* see Mozilla bug #293670.  Done in a timeout to allow mozilla to
+* actually draw to the screen */
+
+static gboolean
+timeout_update_gok (GtkMozEmbed *html)
+{
+	g_signal_emit_by_name (gtk_widget_get_accessible (GTK_WIDGET (html)),
+		"children_changed::add", -1, NULL, NULL);
+	return FALSE;
+}
+
 static gint
 tny_moz_embed_stream_close (TnyStream *self)
 {
@@ -207,7 +221,9 @@ tny_moz_embed_stream_close (TnyStream *self)
 	if (priv->embed)
 	{
 		gtk_moz_embed_close_stream (priv->embed);
+		g_timeout_add (2000, (GSourceFunc) timeout_update_gok, priv->embed);
 		gtk_moz_embed_reload (priv->embed, GTK_MOZ_EMBED_FLAG_RELOADNORMAL);
+		
 	}
 
 	return 0;
